# NDKDemo

./: .gitignore  README.md  build.gradle  gradle.properties
app/: build.gradle
app/jni/: Android.mk  Application.mk  NativeProcess.c  com_bryan_ndk_NativeProcess.h
app/jni/src/: JniBasic.cpp  JniCallBack.cpp
app/jni/src/utils/: StringUtils.cpp  StringUtils.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JNIHelp.h  JniBasic.cpp  JniCallBack.cpp  com_bryan_ndk_JniBasic.h  com_bryan_ndk_JniCallBack.h  jniloader.cpp  log.h  utils.h
app/src/main/java/com/bryan/: MainActivity.java
app/src/main/java/com/bryan/ndk/: JniBasic.java  JniCallBack.java  NativeProcess.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
